Add Solr 8 compatibility. (#33)